--- a/src/components/quote/quote.module.css
+++ b/src/components/quote/quote.module.css
@@ -12,60 +12,76 @@
 .quoteBox {
   background: linear-gradient(
     135deg,
-    rgba(255, 223, 186, 0.9),
-    rgba(249, 215, 255, 0.9)
+    rgba(245, 222, 179, 0.9),
+    rgba(210, 180, 140, 0.85)
   );
-  border: 2px solid rgba(204, 204, 255, 0.8);
-  border-radius: 15px;
+  border: 3px solid rgba(111, 51, 2, 0.9);
+  border-radius: 10px;
   padding: 20px;
-  max-width: 300px;
-  box-shadow: 0 6px 15px rgba(139, 92, 246, 0.4),
-    0 0 10px rgba(204, 204, 255, 0.6) inset;
+  max-width: 400px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6),
+    0 0 15px rgba(218, 165, 32, 0.5) inset;
   position: relative;
   transition: all 0.5s ease-out;
-  font-family: "Papyrus", "Cursive", sans-serif;
+  font-family: "Uncial Antiqua", "Georgia", serif;
 }
 
-.quoteBox::before {
+/* .quoteBox::before {
   content: "“";
-  font-size: 70px;
-  color: rgba(204, 204, 255, 0.8);
+  font-size: 90px;
+  color: rgba(218, 165, 32, 0.8);
   position: absolute;
-  top: -20px;
-  left: 10px;
-  font-family: "Georgia", serif;
-  opacity: 0.5;
-  text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.8);
-}
+  top: -40px;
+  left: 20px;
+  font-family: "Uncial Antiqua", serif;
+  opacity: 0.8;
+  text-shadow: 3px 3px 10px rgba(139, 69, 19, 0.8);
+} */
 
-.quoteBox::after {
+/* .quoteBox::after {
   content: "”";
-  font-size: 70px;
-  color: rgba(204, 204, 255, 0.8);
+  font-size: 90px;
+  color: rgba(218, 165, 32, 0.8);
   position: absolute;
-  bottom: -20px;
-  right: 10px;
-  font-family: "Georgia", serif;
-  opacity: 0.5;
-  text-shadow: 2px 2px 5px rgba(255, 255, 255, 0.8);
-}
+  bottom: -40px;
+  right: 20px;
+  font-family: "Uncial Antiqua", serif;
+  opacity: 0.8;
+  text-shadow: 3px 3px 10px rgba(139, 69, 19, 0.8);
+} */
 
 .quoteText {
-  font-size: 1.4rem;
+  padding-right: 15px;
+  text-align: center;
+  font-size: 1.7rem;
   line-height: 1.8;
-  color: #4b0082;
-  margin-bottom: 15px;
+  color: #4a3004;
+  margin-bottom: 20px;
   font-style: italic;
-  padding-left: 20px;
-  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.6);
+  padding-left: 30px;
+  text-shadow: 2px 2px 5px rgba(102, 76, 12, 0.6);
+  font-family: "Uncial Antiqua", serif;
 }
 
 .quoteAuthor {
-  font-size: 1rem;
-  color: #5f4b8b;
-  text-align: right;
+  font-size: 1.2rem;
+  color: #4a3004;
+  text-align: center;
   font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.6);
+  text-shadow: 1px 1px 4px rgba(184, 134, 11, 0.7);
+  font-family: "Uncial Antiqua", serif;
+  margin-top: 10px;
+}
+
+.link {
+  color: #4a3004;
+  text-decoration: none;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+.link:hover {
+  color: #743709;
+  text-shadow: 0px 0px 5px rgba(218, 165, 32, 0.8);
 }
 
 .hidden {
@@ -77,4 +93,5 @@
 .visible {
   opacity: 1;
   transform: translateY(0);
+  transition: opacity 0.6s ease, transform 0.6s ease;
 }
